--- a/package.json
+++ b/package.json
@@ -18,5 +18,11 @@
   "homepage": "https://github.com/KAYEMBAJONATHAN/ES6-awe-books#readme",
   "dependencies": {
     "luxon": "^3.3.0"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.27.5"
   }
 }
